--- a/config/apache2/apache2.conf
+++ b/config/apache2/apache2.conf
@@ -162,11 +162,6 @@ Include ports.conf
 	Require all denied
 </Directory>
 
-<Directory /usr/share>
-	AllowOverride None
-	Require all granted
-</Directory>
-
 <Directory /var/www/>
 	Options Indexes FollowSymLinks
 	AllowOverride None
@@ -180,7 +175,10 @@ Include ports.conf
 #</Directory>
 
 
-
+# Set default page
+<IfModule dir_module>
+    DirectoryIndex /var/www/html/doyouthinkyouarereal.com/static/index.html 
+</IfModule>
 
 # AccessFileName: The name of the file to look for in each directory
 # for additional configuration directives.  See also the AllowOverride
