--- a/config/apache2/apache2.conf
+++ b/config/apache2/apache2.conf
@@ -180,7 +180,7 @@ Include ports.conf
 #</Directory>
 
 
-
+ServerName ${APACHE2_SERVER_NAME}
 
 # AccessFileName: The name of the file to look for in each directory
 # for additional configuration directives.  See also the AllowOverride
