Working timecheck app

--- a/config/apache2/sites-available/doyouthinkyouarereal.com-le-ssl.conf
+++ b/config/apache2/sites-available/doyouthinkyouarereal.com-le-ssl.conf
@@ -1,6 +1,7 @@
 <IfModule mod_ssl.c>
      <VirtualHost *:443>
           Include sites-shared.conf
+          DocumentRoot /var/www/html/doyouthinkyouarereal.com/static
           SSLCertificateFile /etc/letsencrypt/live/doyouthinkyouarereal.com/fullchain.pem
           SSLCertificateKeyFile /etc/letsencrypt/live/doyouthinkyouarereal.com/privkey.pem
           Include /etc/letsencrypt/options-ssl-apache.conf
