--- a/config/apache2/sites-available/doyouthinkyouarereal.com.conf
+++ b/config/apache2/sites-available/doyouthinkyouarereal.com.conf
@@ -1,3 +1,5 @@
-<VirtualHost *:80>
+<VirtualHost *:80>.conf
      Include sites-shared.conf
+     DocumentRoot /var/www/html/doyouthinkyouarereal.com/static
+     WSGIScriptAlias /content /var/www/wsgi/timecheck.wsgi
 </VirtualHost>
